base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-82263855
  namespace: 82263855
spec:
  type: ClusterIP
  selector:
    app: app-82263855
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
