base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-82263855-ingress
  namespace: 82263855
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # 요청 경로를 서비스로 전달
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false" # HTTPS 리디렉션 비활성화
spec:
  ingressClassName: ingress-internal # Ingress Class를 내부 컨트롤러로 설정
  rules:
  - host: 82263855.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-82263855 # 연결할 Service 이름
            port:
              number: 80       # Service의 포트 번호
